# openai-promptify-py

./: README.md  pyproject.toml
src/: openai_promptify.py
tests/: test_e2e.py  test_openai_promptif.py
